<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    tools:context=".ui.escultor.EscultorFragment">

    <ScrollView
        android:id="@+id/scrollViewEscultor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEscultor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escultor1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="519dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/horse_one" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/escultor2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/horse_two" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textStyle="italic"
                android:textSize="16sp"
                android:text="@string/escultor3" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escultor4"
                android:paddingHorizontal="10dp"
                android:shadowColor="@color/shadow"
                android:paddingVertical="10dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="299dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/horse_three" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textStyle="italic"
                android:textSize="16sp"
                android:text="@string/escultor5" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escultor6"
                android:paddingHorizontal="10dp"
                android:shadowColor="@color/shadow"
                android:paddingVertical="10dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="733dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/escultor_img" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/escultor7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/shadow"
                android:text="@string/escultor8"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>