<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    tools:context=".ui.inventor.InventorFragment">

    <ScrollView
        android:id="@+id/scrollViewInventor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInventor1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/inventor1" />

            <TextView
                android:id="@+id/textViewInventor2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/inventor2" />

            <ImageView
                android:id="@+id/imageViewInventor1"
                android:layout_width="wrap_content"
                android:layout_height="305dp"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:src="@drawable/inventor1" />

            <TextView
                android:id="@+id/textViewInventor3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingHorizontal="10dp"
                android:text="@string/inventor3"
                android:textSize="16sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/dividerInventor1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewInventor4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/inventor4" />

            <ImageView
                android:id="@+id/imageViewInventor2"
                android:layout_width="wrap_content"
                android:layout_height="295dp"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:src="@drawable/inventor2" />

            <TextView
                android:id="@+id/textViewInventor5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/inventor5"
                android:textSize="16sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/dividerInventor2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewInventor6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/inventor6" />

            <ImageView
                android:id="@+id/imageViewInventor3"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:src="@drawable/inventor3" />

            <TextView
                android:id="@+id/textViewInventor7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingBottom="20dp"
                android:text="@string/inventor7"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>