<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    tools:context=".ui.pintor.PintorFragment">

    <ScrollView
        android:id="@+id/scrollViewPintor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPintor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/pintorDescription"
                 />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="543dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/mona_lisa" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textStyle="italic"
                android:text="@string/pintorMonaLisaTitle" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/pintorMonaLisa"  />

            <View
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="fill_parent"
                android:layout_height="210dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/last_supper" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:text="@string/pintorLastSupperTitle"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/pintorLastSupper"  />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="543dp"
                android:paddingTop="15dp"
                android:layout_gravity="center"
                android:src="@drawable/lady_with_an_ermine" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/pintorLadyErmineTitle"
                android:textStyle="italic"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                android:text="@string/pintorLadyErmine"  />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>