<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_peach"
    tools:context=".ui.cientifico.CientificoFragment">

    <ScrollView
        android:id="@+id/scrollViewCientifico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewCientifico1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cientifico1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:shadowColor="@color/shadow"
                />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewCientifico2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/shadow"
                android:text="@string/cientifico2"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp" />

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewCientifico3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/shadow"
                android:text="@string/cientifico3"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp" />

            <View
                android:id="@+id/divider8"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewCientifico4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/shadow"
                android:text="@string/cientifico4"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp" />

            <View
                android:id="@+id/divider9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textViewCientifico5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/shadow"
                android:text="@string/cientifico5"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>